--- a/portfolio/src/components/Navbar.css
+++ b/portfolio/src/components/Navbar.css
@@ -4,7 +4,9 @@
     justify-content: center;
     
     align-items: center;
-    background-color: blue;
+    /* background-color: blue; */
+    color:blue;
+    height: 80px;
     
 }
 .sub{
@@ -14,6 +16,7 @@
     gap:2rem;
     margin-right: 50px;
     font-size: 20px;
+    cursor:pointer;
     
 }
 
@@ -27,9 +30,13 @@
     border-radius: 10px;
     font-size: 20px;
     border: 1px solid black;
-    
-    
+    background: linear-gradient(to right, #85D8CE, #9963E9);
+    height: 40px;
+    border:none;
+    cursor: pointer;
+    color:white
 }
+
 
 
 
